--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-  "name": "سورس تيبثون العربي - TEPTHON ARABIC",
-  "description": "أهلًا بك في الإصدار الثاني من سورس تيبثون العربي - @Tepthon",
-  "logo": "https://telegra.ph/file/dde13c45521934cce18c7.jpg",
+  "name": "سورس كـايدو العربي - KAIDO ARABIC",
+  "description": "- تنصيـب سورس كـايدو على هيروكـو مجانًا",
+  "logo": "https://telegra.ph/file/95286ed06effce16cf71d.jpg",
   "keywords": [
     "plugin",
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/Tepthonee/PPF22",
+  "repository": "https://github.com/YY6UU/Source",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
@@ -56,7 +56,7 @@
     },
     "UPSTREAM_REPO": {
       "description": "رمز السورس لا تغيره ابدا",
-      "value": "https://github.com/Tepthonee/PPF22",
+      "value": "https://github.com/YY6UU/Source",
       "required": false
     }
     },
